[package]
name = "loco_stow"
path = "src/main.rs"
version = "0.1.0"
authors = ["Connor Luckett <connor_luckett@brown.edu>", "Chris Cataldo <christopher_cataldo@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_sys = "0.3"
lazy_static = "1"
regex = "1"
