[package]
name = "loco_stow"
path = "src/main.rs"
version = "0.1.0"
authors = ["Connor Luckett <connor_luckett@brown.edu>", "Chris Cataldo <christopher_cataldo@brown.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0"
lazy_static = "1"
regex = "1"
wasm-bindgen = "0.2"
num-traits = "0.2"
patricia_tree = "0.1"
